# clawmachine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  NOTICE.md  README.md  intro.txt
.claude/commands/: check-your-plan.md  commit-pull-push.md
.claude/skills/create-skill/scripts/: validate-skill.sh
Documents/: PersonalAI.md  SKILL-FORMAT.md  TOOL-FORMAT.md
Documents/architecture/: 00-overview.md  01-system-architecture.md  02-data-model.md  03-api-specification.md  04-worker-engine.md  05-skills-system.md  06-cli-reference.md  07-flutter-ui.md  08-deployment.md  09-security-and-reliability.md  10-implementation-roadmap.md  INDEX.md
crates/claw-api/: Cargo.toml
crates/claw-api/src/: auth.rs  main.rs  upload_utils.rs  util.rs
crates/claw-api/src/routes/: auth_routes.rs  catalog.rs  chat.rs  config.rs  credentials.rs  crons.rs  docker.rs  events.rs  job_templates.rs  jobs.rs  mod.rs  oauth_login.rs  pipelines.rs  skills.rs  status.rs  tools.rs  webhook.rs  workspaces.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: api_client.rs  main.rs
crates/claw-models/: Cargo.toml
crates/claw-models/src/: chat.rs  credential.rs  cron_schedule.rs  events.rs  job.rs  job_template.rs  lib.rs  pipeline.rs  skill.rs  tool.rs  workspace.rs
crates/claw-redis/: Cargo.toml
crates/claw-redis/src/: chat.rs  config.rs  credentials.rs  crons.rs  job_templates.rs  jobs.rs  lib.rs  logs.rs  memory.rs  pipelines.rs  pool.rs  sessions.rs  skills.rs  tools.rs  users.rs  workspaces.rs
crates/claw-redis/tests/: integration.rs
crates/claw-scheduler/: Cargo.toml
crates/claw-scheduler/src/: cron_engine.rs  main.rs  watcher.rs
crates/claw-worker/: Cargo.toml
crates/claw-worker/src/: anthropic.rs  docker.rs  environment.rs  executor.rs  main.rs  oauth_login_handler.rs  pipeline_runner.rs  prompt_builder.rs  secrets.rs  session_container.rs  summarizer.rs  token_refresh.rs
docker/: Caddyfile  Dockerfile.backend  Dockerfile.sandbox  Dockerfile.worker  docker-compose.yml
flutter_ui/: .env.dev  README.md  pubspec.yaml
flutter_ui/lib/: main.dart
flutter_ui/lib/models/: credential.dart  cron_schedule.dart  file_tree_node.dart  job.dart  job_template.dart  skill.dart  tool.dart  workspace.dart  workspace_event.dart
flutter_ui/lib/providers/: chat_controller.dart
flutter_ui/lib/screens/: chat_screen.dart  credentials_screen.dart  dashboard_screen.dart  job_detail_screen.dart  jobs_screen.dart  login_screen.dart  pipeline_create_screen.dart  pipelines_screen.dart  schedule_create_screen.dart  schedules_screen.dart  settings_screen.dart  skill_detail_screen.dart  skills_screen.dart  submit_job_screen.dart  template_create_screen.dart  templates_screen.dart  tool_detail_screen.dart  tools_screen.dart  users_screen.dart  workspaces_screen.dart
flutter_ui/lib/services/: api_client.dart  event_service.dart  file_upload.dart
flutter_ui/lib/widgets/: app_shell.dart  credential_binding_editor.dart  file_tree.dart  markdown_message.dart  skill_selector.dart  status_badge.dart  tool_activity.dart  tool_selector.dart
flutter_ui/macos/Runner.xcodeproj/: project.pbxproj
flutter_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_ui/macos/Runner/Configs/: AppInfo.xcconfig
flutter_ui/test/: widget_test.dart
flutter_ui/web/: index.html  manifest.json
proto/: main.rs
scripts/: authenticate-worker.sh  backend.sh  claw.service  common.sh  deploy.sh  dev.sh  frontend.sh  install.sh  oauth-login.js  result.sh  smoke-test-p0.sh  startup.sh  submit.sh  test-claude-md-reread.sh
skills/create-skill/: SKILL.md
skills/create-skill/references/: spec-summary.md
skills/templates/: code-review.md  concise.md
tests/e2e/: .gitignore  package.json  playwright.config.ts
tests/e2e/specs/: full-ux.spec.ts  inspect.spec.ts  workspace-rearchitect.spec.ts
