[package]
name = "claw-api"
version = "0.1.0"
edition = "2021"

[dependencies]
claw-models = { path = "../claw-models" }
claw-redis = { path = "../claw-redis" }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
deadpool-redis = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
zip = { version = "8.2.0", features = ["deflate"] }
