[package]
name = "claw-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
claw-models = { path = "../claw-models" }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
