[package]
name = "claw-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
claw-models = { path = "../claw-models" }
redis = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
