[package]
name = "claw-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
claw-models = { path = "../claw-models" }
redis = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = "6.0.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
dotenvy = { workspace = true }
