[package]
name = "claw-scheduler"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
claw-models = { path = "../claw-models" }
claw-redis = { path = "../claw-redis" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
notify = { workspace = true }
cron = { workspace = true }
deadpool-redis = { workspace = true }
