[package]
name = "claw-worker"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
claw-models = { path = "../claw-models" }
claw-redis = { path = "../claw-redis" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
deadpool-redis = { workspace = true }
uuid = { workspace = true }
hostname = "0.4"
reqwest = { workspace = true }
tokio-util = { workspace = true }
chrono.workspace = true
dirs = "6"
users = "0.11"
sha2 = "0.10"
tempfile = "3"
base64 = "0.22"
